[tool.poetry]
name = "web_itmo"
version = "0.1.0"
description = ""
authors = ["Zakhar Koryagin <koryagin.03@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
