[tool.poetry]
name = "api"
version = "0.1.0"
description = "Fast API service for PostgreSQL"
authors = ["zvkoryagin <koryagin.03@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
postgres-api = {git = "https://github.com/azazaziy/postgres-api.git", branch="main"}
json-helper = {git = "https://github.com/azazaziy/json-helper.git",branch="main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
